DSS-5239-Menu overlap in dashboard issue (#3216)
* design changes

* design changes

* design changes

* DSS-5239 menus overlapped in dashboard issue fixed

--- a/web/cpdss-portal/apps/cpdss/src/app/business/voyage-status/ship-landing-tanks/ship-landing-tanks.component.scss
+++ b/web/cpdss-portal/apps/cpdss/src/app/business/voyage-status/ship-landing-tanks/ship-landing-tanks.component.scss
@@ -1,5 +1,5 @@
 .landing-page-tank-wrapper{
-    height: calc(100vh - 468px);
+    height: calc(100vh - 488px);
     padding-bottom: 25px;
 }
 .tab-landing{
