--- a/web/cpdss-portal/apps/cpdss/src/styles.scss
+++ b/web/cpdss-portal/apps/cpdss/src/styles.scss
@@ -1920,7 +1920,7 @@ height: 15px;
   .tank-outer-pattern{
     height: 100%;
     max-height: 350px;
-    min-height: 160px;
+    min-height: 158px;
     .tank-inner-wrapper-pattern .tank-column-pattern > div {
       .tank-name{
       text-align: left;
